# sql-simple-lib

./: README.md  pyproject.toml  sql-simple-lib.code-workspace
sql_simple_lib/: __init__.py  sql_builder.py
sql_simple_lib/sql_builder/: __init__.py  sql_builder.py
sql_simple_lib/sql_builder/commands/: From.py  Select.py
sql_simple_lib/sql_builder/functions/: From.py
